Closed Bug 1646007 Opened 4 years ago Closed 4 years ago

[Wayland] [DMABUF] WebGL Aquarium regressed from 60 fps to 30 fps

Categories

(Core :: Graphics: CanvasWebGL, defect, P2)

x86_64
Linux
defect

Tracking

()

VERIFIED FIXED
mozilla79
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- unaffected
firefox77 --- unaffected
firefox78 --- unaffected
firefox79 --- verified

People

(Reporter: jan, Assigned: stransky)

References

(Blocks 1 open bug, Regression, )

Details

(Keywords: nightly-community, perf, regression)

Attachments

(2 files)

Gnome Wayland, Mesa 20.1.1, Debian Testing, Macbook Pro

500 fish. OOP WebGL is disabled.
last good: 60 fps with dmabuf (without dmabuf: 34-36 fps)
first bad: 30 fps with and without dmabuf
MOZ_ENABLE_WAYLAND=1 mozregression --good 2020-06-14 --bad cf997da83953 --pref gfx.webrender.all:true widget.wayland-dmabuf-webgl.enabled:true -a https://webglsamples.org/aquarium/aquarium.html

4:12.35 INFO: Last good revision: ca8139d58d58ea03def4ff2375ab9010cbd2a1b3
4:12.35 INFO: First bad revision: 567a8768593eb06a86deb263f94d9de2d3d3e8fa
4:12.35 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=ca8139d58d58ea03def4ff2375ab9010cbd2a1b3&tochange=567a8768593eb06a86deb263f94d9de2d3d3e8fa

567a8768593eb06a86deb263f94d9de2d3d3e8fa Jeff Gilbert — Bug 1632249 - Disable now-failing DXGL test for now.
832f39c3b02c36aa846c49c6f5a3512d1f55deff Jeff Gilbert — Bug 1632249 - Check weakptr value before deref in gl::Texture/Renderbuffer. r=lsalzman
05896dbeb434d6f3ca9324f01eb67020d932f50f Jeff Gilbert — Bug 1632249 - Determine webgl's layers::TextureType in Present. r=lsalzman
8439f89e170b1fa8175723699f9abeff27ad09bf Jeff Gilbert — Bug 1632249 - Replace GLContextProvider::CreateOffscreen with GLContext::CreateOffscreenDefaultFb. r=lsalzman
e326157c5af9c6928b7a67177f1065fd16825c43 Jeff Gilbert — Bug 1632249 - Remove unused var g2DContextLayerUserData.
2739940a4fb7b7e4bd4f1ec3907a2b286b3fbe8d Jeff Gilbert — Bug 1632249 - Mark mCapturedFrameInvalidated even if mIsCanvasDirty. r=handyman
8f0fb988dc5acc46555f2bcebb62649139c9975e Jeff Gilbert — Bug 1632249 - Fix Bb failures. r=gw
fd4a74ec97a5d9540157f30dfc6184031c2499ac Jeff Gilbert — Bug 1632249 - NON_PREMULT TextureClient iff NON_PREMULT CanvasClient. r=handyman
4cda148ef28f72a0ca30b68919332996e667eec6 Jeff Gilbert — Bug 1632249 - Create a separate WebGLContext::PresentInto function for WebXR. r=jgilbert
0b191b707750e040289033359306e4966c1bf062 Jeff Gilbert — Bug 1632249 - WebXR compositing fixes. r=imanol
16c5dd2cfd600a62c80ca17cfb35c0868e016056 Jeff Gilbert — Bug 1632249 - Support compositing out-of-process WebGL. r=handyman,lsalzman,nical,geckoview-reviewers,agi,imanol

Severity: -- → S2
Priority: -- → P2

11/Wayland backends are both enabled on Linux by default.
Check Wayland backend first and fallback to X11 when Wayland isn't active.

Assignee: nobody → stransky
Status: NEW → ASSIGNED

Updated, Thanks.

See Also: → 1634213
Pushed by cbrindusan@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/da3c1f47c514 [Wayland] Check Wayland backend before X11, r=jgilbert https://hg.mozilla.org/integration/autoland/rev/ed590162c319 [Wayland] Check Wayland dmabuf backend and fallback to a default one, r=jgilbert
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla79

This contains usage of TextureType::WaylandDMABUF, which was renamed to TextureType::DMABUF by bug 1645704.

Status: RESOLVED → REOPENED
Resolution: FIXED → ---

(In reply to Jan Andre Ikenmeyer [:darkspirit] from comment #6)

This contains usage of TextureType::WaylandDMABUF, which was renamed to TextureType::DMABUF by bug 1645704.

That's in D79978 but D79979 fixes it. It's not clean but should work as long as both commits are used.

Oh

Status: REOPENED → RESOLVED
Closed: 4 years ago4 years ago
Resolution: --- → FIXED

Gnome Wayland, Debian Testing, Mesa 20.1.1, Intel Iris Graphics 6100 (BDW GT3)
Fix confirmed.
last bad: MOZ_ENABLE_WAYLAND=1 mozregression --repo autoland --launch 92991ac3e69b59cc793e734e98057a52d7a2e823 --pref gfx.webrender.all:true widget.wayland-dmabuf-webgl.enabled:true -a https://webglsamples.org/aquarium/aquarium.html
first good: MOZ_ENABLE_WAYLAND=1 mozregression --repo autoland --launch ed590162c319 --pref gfx.webrender.all:true widget.wayland-dmabuf-webgl.enabled:true -a https://webglsamples.org/aquarium/aquarium.html

Status: RESOLVED → VERIFIED
Regressed by: 1648554
No longer regressed by: 1648554
Regressions: 1648554
Has Regression Range: --- → yes

Great to see the DMABuf backend for WebGL getting switched on by default by the way!

Regressions: 1652783
Regressions: 1659350
Regressions: 1661518
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: