Bug 1646007 [Wayland] Check Wayland backend before X11, r=jgilbert

X11/Wayland backends are both enabled on Linux by default.
Check Wayland backend first and fallback to X11 when Wayland isn't active.

Differential Revision: https://phabricator.services.mozilla.com/D79978