gfx/thebes/gfxPlatform.h
@@ -772,6 +772,7 @@ class gfxPlatform : public mozilla::layers::MemoryPressureListener {
   virtual bool DevicesInitialized() { return true; };
 
   virtual bool UseWaylandDMABufWebGL() { return false; }
+  virtual bool IsWaylandDisplay() { return false; }
 
   static uint32_t TargetFrameRate();
 
